--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="app.js"></script>
 </head>
 <body>
-    <h1>testing the application</h1>
+    <h1>testing the application testing</h1>
 </body>
 </html>
