--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script defer src="app1.js"></script>
 </head>
 <body>
-    <h1>testing the application testing</h1>
+    <h1>Hello World</h1>
+    <button>Fetch todo's</button>
+    <ol>
+
+    </ol>
 </body>
 </html>
